serve a single file with koa

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Share Play</title>
+<title>TeleParty Tonight</title>
 </head>
 
-<h1>SharePlay</h1>
+<h1>TeleParty Tonight</h1>
 </html>
