--- a/public/index.html
+++ b/public/index.html
@@ -32,8 +32,9 @@
 </form>
 
 <!-- sync time with server -->
-<socket-element id="socket" url="/timesync"/>
-<timesync id="timesync"/>
+<websockel="socket" url="/timesync">
+<timesyncel id="timesync"/>
+</websockel>
 
 <!-- player -->
 <div id="player" />
