unbreak static files.

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,7 @@
 <head>
 <title>TeleParty Tonight</title>
 <script src="/init.js" type=module defer></script>
-<script src="/socket-element. type=module deferjs"></script>
-<script src="/timesync.js" type=module defer></script>
-<script src="/player.js" type=module defer></script>
-<script src="/loader.js" type=module defer></script>
+<script src="/tpt.js" type=module defer></script>
 </head>
 
 <h1>TeleParty Tonight</h1>
