get timesync going whew

--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
 </form>
 
 <!-- sync time with server -->
-<websockel="socket" url="/timesync">
-<timesyncel id="timesync"/>
-</websockel>
+<web-sock-el url="/timesync">
+<time-sync-el/>
+</web-sock-el>
 
 <!-- player -->
 <div id="player" />
