--- a/public/index.html
+++ b/public/index.html
@@ -28,37 +28,54 @@
 <input type="submit" name="init-button" value="go">
 </form>
 
+<!-- player -->
+<video id="player">
+</video>
+
+<!-- seed query params -->
 <defaulter-el>
-	<param startTime="7:30pm"/>	
-	<param timesync="/timesync"/>
-	<param torrent=""/>
-	<param pipeTo="#player"/>
-</defaulter-el>
+	<!-- websocket -->
+	<param websocket="/timesync" />
 
-<!-- a time basis -->
+	<!-- clock system -->
+	<param start="#player" />
+	<param time="7:30pm" />
+	<param timesyncSocket="#socket" />
+
+	<!-- webtorrent -->
+	<param stun="" />
+	<param tracker="" />
+	<param target="#player" />
+	<param torrent="magnet:?xt=urn:btih:08ada5a7a6183aae1e09d831df6748d566095a10" />
+</query-defaulter-el>
+
+<!-- websocket connection -->
+<web-sock-el id="socket">
+	<query-param-to-attr param="websocket" />
+</web-sock-el>
+
+<!-- a time system -->
 <wall-clock>
-
-	<!-- player -->
-	<video id="player">
-		<query-param-to-attr param="startTime" />
-	</video>
+	<!-- start media at designated time -->
+	<media-starter>
+		<query-param-to-attr param="start" />
+		<query-param-to-attr param="time" />
+	</media-starter>
 
 	<!-- sync time with server -->
 	<time-sync-el>
-		<web-sock-el>
-			<query-param-to-attr param="timesync" />
-		</web-sock-el>
+		<query-param-to-attr param="timesyncSocket" />
 	</time-sync-el>
 </wall-clock>
 
 <!-- torrent -->
-<webtorrent-el>
-	<query-param-to-attr param="torrent" />
-	<query-param-to-attr param="pipeTo" />
-</webtorrent-el>
-
-
-
-
+<webtorrent-client>
+	<query-param-to-els param="stun" el="webtorrent-stun-turn" />
+	<query-param-to-els param="tracker" el="webtorrent-tracker" />
+	<webtorrent-torrent>
+		<query-param-to-attr param="target" />
+		<query-param-to-attr param="torrent" />
+	</webtorrent-torrent>
+</webtorrent-client>
 
 </html>
