web-sock-el name used consistently

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
 	<param tracker="" />
 	<param target="#player" />
 	<param torrent="magnet:?xt=urn:btih:08ada5a7a6183aae1e09d831df6748d566095a10" />
-</query-defaulter-el>
+</defaulter-el>
 
 <!-- websocket connection -->
 <web-sock-el id="socket">
